# Orqestra

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.odoo.yml  docker-compose.prod.yml  docker-compose.yml  process-notes.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  dev.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_event_type_varchar.py  0003_add_tenant_support.py
backend/app/: main.py
backend/app/agents/: base.py  compliance.py  customer_success.py  finance.py  inventory.py  legal.py  logistics.py  operations_manager.py  procurement.py  procurement_director.py  procurement_review.py  registry.py  sales.py  technical_evaluation.py
backend/app/api/: admin.py  benchmark.py  cases.py  dashboard.py  demo.py  events.py
backend/app/auth/: middleware.py  router.py  tenant.py
backend/app/business_tools/: __init__.py  base.py  definitions.py  inventory_service.py  onboarding_service.py  policy_engine.py  pricing_engine.py  registry.py  supplier_db.py
backend/app/deliberation/: adjudicator.py  agent_manager.py  challenge_validator.py  scoring_engine.py  state_machine.py
backend/app/events/: event_store.py  projections.py  publisher.py
backend/app/governance/: approval_handler.py  brief_generator.py  clarification.py  iteration_manager.py  recovery.py
backend/app/memory/: memory_promotion.py  memory_service.py  queries.py
backend/app/middleware/: error_handler.py  logging.py
backend/app/models/: __init__.py  benchmark_run.py  case.py  customer.py  directive.py  memory.py  mixins.py  notification_config.py  tenant.py  user.py  (+2 more)
backend/scripts/: seed_workflows.py  setup_odoo.py
backend/seed/: customers.json  demo_cases.json  load.py  memories.json  suppliers.json
backend/tests/: conftest.py  test_api_cases.py  test_api_dashboard.py  test_api_demo.py  test_benchmark.py  test_challenge_validator.py  test_clarification.py  test_customer_onboarding.py  test_e2e_features.py  test_e2e_smoke.py  test_event_store.py  test_governance.py  test_memory_service.py  test_recovery.py  test_scoring_engine.py  test_state_machine.py  test_tool_definitions.py  test_workflow_config.py
(+75 files in other folders)
